--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
           shopt -s extglob
           cd ./markdown
           cp -a !(quartz.config.ts) ../quartz/content
+          cp quartz.config.ts ../quartz
       ############# Set up NodeJS on our runner.
       - uses: actions/setup-node@v3
         with:
