--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: jackyzha0/quartz
-          ref: refs/tags/v4.2.4
           path: './quartz'
           fetch-depth: 0 # Fetch all history for git info
       ############# Checks out our own directory onto our runner, under the ./markdown subdirectory.
@@ -55,11 +54,11 @@ jobs:
       - name: Install Dependencies + Build
         working-directory: ./quartz
         run: |
-          npm i
+          npm ci
           npx quartz build
       ############# Once Quartz is built, sends all the rendered HTML files to GitHub Pages.
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./quartz/public
  
@@ -72,4 +71,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
